appId: ${APP_ID}
name: focus_timer_cancel_keep_going_keeps_timer_running
tags:
  - focus-timer
---
- runFlow:
    file: ../common/launch_app_allow_notifications.yaml
- runFlow:
    file: ../common/start_focus_timer.yaml
- tapOn:
    id: "timer-tap-gesture-background"
- tapOn:
    id: "timer-cancel-button"
- assertVisible: "End focus session"
- assertVisible: "Your current focus timer will reset."
- tapOn:
    text: "Keep going"
    retryTapIfNoChange: true
    waitToSettleTimeoutMs: 1000
- assertVisible:
    text: "Break"
    enabled: false
- assertNotVisible:
    id: "timer-toggle-button"
    text: "Start"
