appId: ${APP_ID}
name: settings_keep_screen_awake_toggle_changes_and_persists
tags:
  - settings
---
- runFlow:
    file: ../common/launch_app_allow_notifications.yaml
- runFlow:
    file: ../common/open_settings.yaml
- scrollUntilVisible:
    element: "Keep Screen Awake"
    direction: DOWN
- assertVisible:
    text: "Keep Screen Awake"
    checked: true
- tapOn:
    id: "settings-keep-screen-awake-toggle"
    retryTapIfNoChange: true
- assertVisible:
    text: "Keep Screen Awake"
    checked: false
- tapOn: "Save"
- runFlow:
    file: ../common/open_settings.yaml
- scrollUntilVisible:
    element: "Keep Screen Awake"
    direction: DOWN
- assertVisible:
    text: "Keep Screen Awake"
    checked: false
